cluster/cloud/nextcloud/003a-deployment-app.yaml
---
# NEXTCLOUD APP
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nextcloud-app
  namespace: cloud
  labels:
    app: nextcloud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-app
  template:
    metadata:
      labels:
        app: nextcloud-app
    spec:
      volumes:
        - name: nextcloud-volume
          hostPath:
            path: /storage/bluepool/nextcloud
      containers:
        - name: nextcloud-cron
          image: 'nextcloud:apache'
          command: ["/cron.sh"]
          volumeMounts:
          - name: nextcloud-volume
            mountPath: /var/www/html
        - name: nextcloud-app
          image: 'nextcloud:apache'
          volumeMounts:
          - name: nextcloud-volume
            mountPath: /var/www/html
          ports:
          - containerPort: 80
      restartPolicy: Always
      nodeName: hcis1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
